--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "url": "http://wpackagist.org"
         }
     ],
-    "type": "wordpress-plugin",
+    "type": "wordpress-muplugin",
     "require": {
         "composer/installers": "~1.0"
     }
